--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -2,6 +2,10 @@
   margin: 2rem 0 2rem;
 }
 
+.container {
+  margin-bottom: 5rem;
+}
+
 .newPostContainer {
   border: 1px solid #ccc;
   padding: 2rem;
@@ -15,7 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin: 5rem 0 5rem;
+  margin-top: 3rem;
 }
 
 .postContainer {
@@ -23,6 +27,7 @@
   padding: 2rem;
   border: 1px solid #ccc;
   border-radius: 5px;
+  margin-bottom: 2rem;
 }
 
 .postText {
