--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -14,6 +14,30 @@
                 </div>
             </form>
         </div>
-        <div class="latestPosts"></div>
+        <div class="latestPosts">
+            {% for post in posts %}
+            <div class="postContainer">
+                <div class="postText">
+                  {{post.text}}
+                </div>
+                <div class="postInfo>
+                  <div class="postLikes">
+                    <i id="likeIcon" class="fa fa-solid fa-heart-o" style="margin-right: 5px;"></i> 0
+                  </div>
+                  <div class="postUser">
+                    <strong>Posted by:</strong>
+                      <a href="/profile/{{post.user.username}}">
+                        {{post.user.username}}
+                      </a>
+                  </div>
+                  <div class="postTimestamp">
+                    <small>
+                      {{post.timestamp}}
+                    </small>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
