--- a/project4/network/templates/network/index.html
+++ b/project4/network/templates/network/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="title">All Posts</h1>
+        <h1 class="title">{{ type }}</h1>
         <div class="newPostContainer">
             <h2>New Post</h2>
             <form id="submit-form">
@@ -20,7 +20,7 @@
                 <div class="postText">
                   {{post.text}}
                 </div>
-                <div class="postInfo>
+                <div class="postInfo">
                   <div class="postLikes">
                     <i id="likeIcon" class="fa fa-solid fa-heart-o" style="margin-right: 5px;"></i> 0
                   </div>
@@ -38,6 +38,37 @@
                 </div>
               </div>
             {% endfor %}
+        </div>
+        <div class="step-links">
+            {% if posts.has_previous %}
+                <a href="?page=1">
+                    <button class="btn btn-primary">
+                        &laquo; first
+                    </button>
+                </a>
+                <a href="?page={{ posts.previous_page_number }}">
+                    <button class="btn btn-primary">
+                        previous
+                    </button>
+                </a>
+            {% endif %}
+    
+            <span class="current">
+                Page {{ posts.number }} of {{ posts.paginator.num_pages }}
+            </span>
+    
+            {% if posts.has_next %}
+                <a href="?page={{ posts.next_page_number }}">
+                    <button class="btn btn-primary">
+                        next
+                    </button>
+                </a>
+                <a href="?page={{ posts.paginator.num_pages }}">
+                    <button class="btn btn-primary">
+                        last &raquo;
+                    </button>
+                </a>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
