--- a/project4/network/static/network/styles.css
+++ b/project4/network/static/network/styles.css
@@ -36,6 +36,13 @@
   margin-bottom: 1rem;
 }
 
+.editForm {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
+
 .postUser {
   margin-top: 10px;
   margin-bottom: 5px;
@@ -82,5 +89,5 @@
   padding: 1rem;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
 }
