--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -30,11 +30,11 @@
     <div class="profileHistory">
       <h3> Posts </h3>
       {% for post in posts %}
-      <div class="postContainer">
+      <div class="postContainer mb-4">
         <div class="postText">
           {{ post.text }}
         </div>
-        <div class="postInfo>
+        <div class="postInfo">
           <div class="postLikes">
             <i id="likeIcon" class="fa fa-solid fa-heart-o" style="margin-right: 5px;"></i> 0
           </div>
