--- a/project4/network/templates/network/layout.html
+++ b/project4/network/templates/network/layout.html
@@ -9,6 +9,7 @@
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
         <script src="{% static 'network/index.js' %}"></script>
         <script src="{% static 'network/profile.js' %}"></script>
+        <script src="{% static 'network/following.js' %}"></script>
 
     </head>
     <body>
