--- a/project4/network/templates/network/profile.html
+++ b/project4/network/templates/network/profile.html
@@ -36,7 +36,10 @@
         </div>
         <div class="postInfo">
           <div class="postLikes">
-            <i id="likeIcon" class="fa fa-solid fa-heart-o" style="margin-right: 5px;"></i> 0
+            <i data-id="{{post.id}}" id="profileLikeIcon" class="fa fa-solid fa-heart-o" style="margin-right: 5px;"></i> 
+            <div data-id="{{post.id}}" id="likes">
+              {{post.likes}}
+            </div>
           </div>
           <div class="postTimestamp">
             <small>
@@ -47,6 +50,37 @@
       </div>
       {% endfor %}
     </div>
+    <div class="step-links">
+      {% if posts.has_previous %}
+          <a href="?page=1">
+              <button class="btn btn-primary">
+                  &laquo; first
+              </button>
+          </a>
+          <a href="?page={{ posts.previous_page_number }}">
+              <button class="btn btn-primary">
+                  previous
+              </button>
+          </a>
+      {% endif %}
+
+      <span class="current">
+          Page {{ posts.number }} of {{ posts.paginator.num_pages }}
+      </span>
+
+      {% if posts.has_next %}
+          <a href="?page={{ posts.next_page_number }}">
+              <button class="btn btn-primary">
+                  next
+              </button>
+          </a>
+          <a href="?page={{ posts.paginator.num_pages }}">
+              <button class="btn btn-primary">
+                  last &raquo;
+              </button>
+          </a>
+      {% endif %}
+  </div>
   </div>
 
 {% endblock %}
