--- a/finalproject/ride/templates/ride/login.html
+++ b/finalproject/ride/templates/ride/login.html
@@ -1,5 +1,23 @@
-{% extends "ride/layout.html" %}
-
+{% extends "ride/layout.html" %} 
 {% block body %}
-<div id="login"></div>
+  <div class="container">
+    <h1 class="title">Login</h1>
+    {% if message %}
+        <div>{{ message }}</div>
+    {% endif %}
+    <form action="{% url 'login' %}" method="post">
+      {% csrf_token %}
+      <div class="field">
+        <label>Username</label>
+        <input autocomplete="off" type="text" name="username" id="username" />
+      </div>
+      <div class="field">
+        <label>Password</label>
+        <input autocomplete="off" type="password" name="password" id="password" />
+      </div>
+      <div class="field">
+        <button type="submit">Login</button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
