--- a/finalproject/ride/templates/ride/register.html
+++ b/finalproject/ride/templates/ride/register.html
@@ -1,5 +1,61 @@
 {% extends "ride/layout.html" %}
 
 {% block body %}
-<div id="register"></div>
+  <div class="container">
+    <h1 class="title">Register</h1>
+    {% if message %}
+      <h2>{{ message }}</h2>
+    {% endif %}
+    <form
+      action="{% url 'register' %}"
+      method="post"
+    >
+      {% csrf_token %}
+      <div class="field">
+        <label htmlFor="username">Username</label>
+        <input
+          autocomplete="off"
+          type="text"
+          name="username"
+          id="username"
+          placeholder="Username"
+        />
+      </div>
+      <div class="field">
+        <label htmlFor="email">Email</label>
+        <input
+          autocomplete="off"
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email"
+        />
+      </div>
+      <div class="field">
+        <label htmlFor="password">Password</label>
+        <input
+          autocomplete="off"
+          type="password"
+          name="password"
+          id="password"
+          placeholder="Password"
+        />
+      </div>
+      <div class="field">
+        <label htmlFor="confirmation">Confirm Password</label>
+        <input
+          autocomplete="off"
+          type="password"
+          name="confirmation"
+          id="confirmation"
+          placeholder="Confirm Password"
+        />
+      </div>
+      <div class="field">
+        <button type="submit">
+          Register
+        </button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
