--- a/finalproject/ride/static/ride/styles.css
+++ b/finalproject/ride/static/ride/styles.css
@@ -20,6 +20,7 @@
 .title {
   font-size: 3rem;
   margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .description {
@@ -79,4 +80,60 @@ input {
   background-color: #f5f7fa;
   outline: none;
   width: 100%;
+}
+
+.rides {
+  margin-top: 4rem;
+}
+
+.rides h2 {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+ul {
+  list-style: none;
+  width: 30vw;
+}
+
+li {
+  margin-bottom: 2rem;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  padding: 1rem;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+li:hover {
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
+}
+
+.item {
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 768px) {
+  form {
+    width: 100%;
+  }
+
+  .field {
+    width: 80%;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  ul {
+    width: 100%;
+  }
 }
