--- a/finalproject/ride/static/ride/styles.css
+++ b/finalproject/ride/static/ride/styles.css
@@ -120,6 +120,63 @@ li:hover {
   justify-content: space-between;
 }
 
+.details {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  width: 80%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.details ul {
+  width: 100%;
+}
+
+.detailsItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.detailsTitle {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.messages {
+  width: 80%;
+  padding: 1rem;
+  height: 75vh;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  margin-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.messageForm {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin: 0;
+}
+
+.messageInput {
+  margin-right: 1rem;
+}
+
 @media only screen and (max-width: 768px) {
   form {
     width: 100%;
