--- a/finalproject/ride/static/ride/styles.css
+++ b/finalproject/ride/static/ride/styles.css
@@ -223,7 +223,7 @@ li:hover {
   margin-top: 1rem;
 }
 
-.interested {
+.interested, .confirmed {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -235,7 +235,7 @@ li:hover {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 2rem;
   gap: 1rem;
 }
