--- a/finalproject/ride/templates/ride/ride_details.html
+++ b/finalproject/ride/templates/ride/ride_details.html
@@ -73,7 +73,7 @@
   </div>
 
   <h2 style="margin-bottom: 2rem; margin-top: 2rem">Messages</h2>
-  <h2 style="margin-bottom: 2rem; margin-top: 2rem">Below, is a chat with everyone who is interested</h2>
+  <h2 style="margin: 2rem;">Below, is a chat with everyone who is interested</h2>
   <div class="messages">
     <div class="allMessages">
       {% if messages %} 
